<pre>
date:
	* version 0.4
	* gh goes home :) gH in a new tab
	* :open! bypasses cache
	* :buffer and :buffers support (patch from Lars Kindler)
	* added :edit, :e and :tabedit aliases for :open, :tabopen
	* settings can now be changed with += and -= like in vim (patch from Виктор Кожухаров)
	* Support for space/shift-space/alt-left/alt-right keys without beeping
	* :open without argument reloads current page, :tabopen opens an empty tab
	* added 'n' and 'N' to repeat a search

17/04/2007:
	* version 0.3
	* added Ctrl-v support to pass one key to firefox (patch by Muthu Kannan)
	* also 'I' will go to 'ignorekeys' mode until esc is pressed, presenting a workaround
	  for many javascript form fields like GMail, until something better comes along.
	* Vimperator can now be automatically updated in the :addons screen like other extensions
	* fixed :tabnext/:tabprevious commands
	* documented 's' and 'b' guioptions flag for statusbar/bookmark bar
	* implemented the possibility to use CTRL-[ as an alternative to ESC, to leave the command line
	* added Ctrl-Tab and Ctrl-Shift-Tab support for switching tabs without beeping
	* ability to use shift and ctrl with special keys like F1 in mappings
	* small documentation and other fixes

11/04/2007:
	* version 0.2
	* first public release
</pre>